logout-page-added

--- a/pages/templates/registration/logout.html
+++ b/pages/templates/registration/logout.html
@@ -8,8 +8,8 @@
 
   {% block content %}
 <div style="width:100%;text-align:center">
-        <p ><h1>Welcome</h1></p>
+        <p ><h1>You are logged out</h1></p>
     </div>     
-	
+	<a href="{% url 'base' %}"><p>Click here to login</p></a>
   
 {% endblock %} 
