--- a/pages/templates/common.html
+++ b/pages/templates/common.html
@@ -11,28 +11,24 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     {% block head %}
-    <title>Hello, world!</title>
+    <title>Login system</title>
     {% endblock %}
   </head>
-  <body style="background-image:url({% static 'images/472370_webpage-background-images-hd-wallpapers-lovely_1920x1080_h.jpg' %});">
+  <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="{% url 'home' %}">VampBoy</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Company Name</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
-                    </li>
+                    
                     <li class="nav-item active">
                       <a class="nav-link" href="{% url 'profile' %}">Profile</a>
                     </li>
                     
-                    <li class="nav-item">
-                      <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
+                    
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                     <ul class="navbar-nav mr-auto">
@@ -40,7 +36,7 @@
                                 <a class="nav-link" href="{% url 'base' %}">Login <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                                <a class="nav-link" href="{% url 'register' %}">Sign up <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="{% url 'register' %}">Register <span class="sr-only">(current)</span></a>
                         </li>
 						<li class="nav-item active">
                                 <a class="nav-link" href="{% url 'logout' %}">Logout <span class="sr-only">(current)</span></a>
